# finstructbench

./: .gitignore  README.md  SKILL.md  paper.tex  pyproject.toml
experiments/: compare_ingestion.py  compare_modes.py  compare_modes_opus.py  run_benchmark.py
experiments/results/: comparison_opus.json
experiments/results/opus_deterministic/: basel_capital.json  credit_portfolio.json  fair_lending.json  model_validation.json  stress_test.json
experiments/results/opus_hybrid/: basel_capital.json  credit_portfolio.json  fair_lending.json  model_validation.json  stress_test.json
scripts/: gen_credit_portfolio.py  generate_basel_capital.py  generate_credit_portfolio.py  generate_fair_lending.py  generate_stress_test.py
src/finstructbench/: __init__.py  __main__.py  benchmark.py  cli.py  filters.py  graph.py  ingest.py  llm_caller.py  llm_ingest.py  mcp_server.py  paraphrase.py  scorers.py
src/finstructbench/generators/: __init__.py  absence.py  base.py  contradiction.py  counting.py  cross_reference.py  cross_table_aggregation.py  exact_recall.py  multi_hop.py  numeric_computation.py  ranking.py  threshold.py
src/finstructbench/instances/: __init__.py  basel_capital.md  credit_portfolio.md  fair_lending.md  model_validation.md  stress_test.md
tests/: test_mcp_server.py
